[package]
name = "anthropic-auth"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Viktor Gal <viktor@query.mt>"]
license = "MIT"
description = "Anthropic/Claude OAuth 2.0 authentication with PKCE - sync and async APIs"
repository = "https://github.com/querymt/anthropic-auth"
keywords = ["anthropic", "oauth", "authentication", "claude", "pkce"]
categories = ["authentication", "api-bindings"]
readme = "README.md"

[features]
default = ["blocking", "browser"]
blocking = ["reqwest/blocking"]
async = ["reqwest/default"]
browser = ["webbrowser"]
callback-server = ["async", "axum", "tower", "tokio"]
full = ["blocking", "async", "browser", "callback-server"]

[dependencies]
oauth2 = { version = "5.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
base64 = "0.22"
rand = "0.8"
webbrowser = { version = "1.0", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
keyring = "3.6"
